hphp/test/slow/coeffects/poly-3.php.expectf
Fatal error: Coeffect rule requires parameter at position 1 to be an object or null in %s on line 9
